la til tekst på cards vekster

--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -45,7 +45,7 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
     
   <Card 
     title="Miranda Bødtker" 
-    description="Les om Miranda Bødtker" 
+    description="Mangfoldig og fargerik kunstner og illustratør." 
     image="/nav-card-images/ubb-ms-2093-t-02-15-04-07-icon.jpg" 
     imageAlt="Portrett av Miranda Bødtker" 
     href="/tema/vekster/miranda-boedtker" 
@@ -53,14 +53,14 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
 
   <Card 
     title="Knut Fægri" 
-    description="Les om Knut Fægri" 
+    description="Banebrytende botaniker og fremragende formidler." 
     image="/nav-card-images/ubb-ms-2196-a-01-012-icon.jpg" 
     imageAlt="Blomster" 
     href="/tema/vekster/knut-faegri" 
   />
   <Card 
     title="Bokflora" 
-    description="Les om Bokflora" 
+    description="Botaniske spor i bøker og boksamlinger." 
     image="/nav-card-images/ubb-romertall-oktav-iii-b-6 -sch-01-icon.jpg" 
     imageAlt="Plante i bok" 
     href="/tema/vekster/bokflora" 
