--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -3,7 +3,6 @@ title: Helse
 description: Dette er en beskrivelse av temaet helse.
 keywords: 
   - helse
-  - helsevern
   - natur
 asIndexPage: true
 ---
@@ -24,20 +23,65 @@ import { JumpToStories } from '@/components/jump-to-stories'
 
 <ContentGrid>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+Hva har ørn, hjort, elefant, løve og svane til felles?
+
+De er alle navn på apotek som har vært i Bergen!
+
+Både Svaneapoteket (byens eldste) og Løveapoteket har deler av sin historie bevart ved museet og biblioteket. Løveapotekets små flasker med håndmalte glefsende løver viser oss hvordan medisin og ingredienser til medisin ble oppbevart. Graver man litt dypere i arkivene kan vi spore opp familiehistorien til flere generasjoner av apotekere, med både fødelsattester og apotekerbevillinger.
+
+I tillegg til noe så spesielt som Løveapotekets giftprotokoller…
 
 <JumpToStories title="helse" />
+Apotekhistorien kan også berikes med fotografi som viser både plassering i bybildet, men også dokumenterende fotografi som viser Svaneapotekets laboratorium med destilleringskjeler og store ballongflasker for lagring.
 
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor consequat ut vix. Qui gloriatur scribentur et, id velit verear mel, cum no porro debet. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Et clita interesset quo. Eos verear percipit ex, eos ne eligendi inimicus. Id doctus accommodare eam, pri an esse tota prodesset, te veniam oblique posidonium mel. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Accusam explicari sed ei. Scripta periculis ei eam, te pro movet reformidans. His an amet petentium voluptatibus, modo malis error nec no. Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor consequat ut vix. Ne assum fierent his, cibo eruditi necessitatibus id vix, cum tantas audiam reprehendunt in.
+Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetning hva vi ville forvente av et bokverk, var bøkene svært sparsommelig illustrert. En av de eldste trykte medisinbøkene fra 1500-tallet har vi også som en håndskreven utgave på 649(!) sider, altså en avskrift som ble utført over hundre år etter boken ble utgitt, og som fremdeles var et av datidens viktigste verk om medisin. Å kjøpe bøker var både dyrt, og tilgangen til bøker var begrenset. Kan hende det å skrive av en bok er den beste måten å lære faget på?
+
+
+
+
 
 <Cards id="historier" title="Historier om helse" className="full pt-10 md:pt-20">
+
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
+    title="Løveapoteket i bilder" 
     description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
     href="/tema/fisk/christie-og-de-maerkelige-fiske" 
   />
+
+<Card 
+    title="Svaneapoteket" 
+    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+  />
+
+  <Card 
+    title="Tidlige bokverk om medisin" 
+    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+  />
+
+<Card 
+    title="Et menneske i klaffer" 
+    description="Utbrettbar anatomi" 
+    image="/nav-card-images/ubb-romertall-oktav-ii-b-2-sch-01b-icon.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/helse/utbrettbar" 
+  />
+  
+  <Card 
+    title="Epidemi" 
+    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+  />
+
 </Cards>
 
 </ContentGrid>
