--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -37,7 +37,7 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
 <Cards id="historier" title="Historier om vekster" className="full pt-10 md:pt-20">
   <Card 
     title="Reinrose og andre vekster" 
-    description="les mer" 
+    description="Visuelle historier: fra Svalbard til Muséhagen." 
     image="/nav-card-images/um_Bf_By_12027_01-icon.jpg" 
     imageAlt="Akvarell av reinrose" 
     href="/tema/vekster/reinrose-vekster" 
