--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -47,7 +47,7 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="/tema/helse/" 
   />
 
 <Card 
@@ -55,7 +55,7 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="/tema/helse/" 
   />
 
   <Card 
@@ -63,7 +63,7 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="/tema/helse/" 
   />
 
 <Card 
@@ -75,11 +75,11 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
   />
   
   <Card 
-    title="Epidemi" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    title="Epidemipaviljonger og «Sundheds-Certificat»" 
+    description="Les mer om Den Store og Den Lille Epidemipaviljongen" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="/tema/helse/epidemipaviljong" 
   />
 
 </Cards>
