rettet bildetekster stein

--- a/content/tema/helse/epidemipaviljong.mdx
+++ b/content/tema/helse/epidemipaviljong.mdx
@@ -37,7 +37,7 @@ Med bedre hygienetiltak, økt kunnskap om virologi, pluss en statlig vaksinasjon
 
 ## «Sundheds-Certificat»
 Dagens økte reisevirksomhet er både et gode, og igjen en ekstra risiko, for i våre fotspor følger også de smittsomme sykdommene, på samme måte som de alltid har gjort.
-For snart 200 år siden måtte man i tillegg til å ta med penger, piller og pass, også ta med sitt attesterte sunnhetssertifikat. På samme måte som skip måtte ha en attest på at byen de forlot ikke hadde noe pågående smitteutbrudd, måtte også enkeltpersoner ha dette med seg på sin ferd. I 1831 dro vår kjære vandrerske, og her tidligere omtalte, Catharina Hermine Kølle, fra København til Christiania. Med seg hadde også hun sitt Sundheds-Certificat med følgende påskrift:
+For snart 200 år siden måtte man i tillegg til å ta med penger, piller og pass, også ta med sitt attesterte sunnhetssertifikat. På samme måte som skip måtte ha en attest på at byen de forlot ikke hadde noe pågående smitteutbrudd, måtte også enkeltpersoner ha dette med seg på sin ferd. I 1831 dro vår kjære vandrerske, Catharina Hermine Kølle, fra København til Christiania. Med seg hadde også hun sitt Sundheds-Certificat med følgende påskrift:
 «Jeg undertegnede Kongl. svensk-norsk General Consul hersteds, gjør herved vitterlig: at hverken den saakaldte Cholera Morbus eller nogen anden pestagtig Sygdom for nærværende Tid hersker her i Staden eller i Havnene, og at Foreviseren af dette Beviis Jomfru Cathr. Hermine Kølle fra Norge som nu agter at afreise til Christiania i ingen Henseende kan ansees mistænkt for Smitte.»
 
 
@@ -53,7 +53,7 @@ For snart 200 år siden måtte man i tillegg til å ta med penger, piller og pas
 </Work>
 
 
-*Teksten er tidligere publisert i Khrono, 13.03.2020.*
+*En variant av teksten er tidligere publisert i Khrono, 13.03.2020.*
 
 
 </ContentGrid>
