--- a/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
+++ b/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
@@ -12,8 +12,8 @@ keywords:
 ---
 
 <ContentGrid>
-![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-l-1-072-062.jpg)
-*Thomassens regnbue, fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
+![Foto av Astrid Monsen med spade](/images/stein/ubb-ms-2093-l-1-072-062.jpg)
+*Astrid Monsen og assistent på Feltarbeid. Fotograf: Ukjent. Universitetsbiblioteket i Bergen.*
 
 
 # Astrid Monsen – En kvinnelig pioner ved Bergens Museum
@@ -24,8 +24,8 @@ Astrid Monsen var født i Riga i Latvia, med tyskbaltisk mor og norsk far. Hun s
 
 Monsen var en av de første profesjonelle kvinnelige geologene i Norge, og hadde i studietiden og i Leipzig spesialisert seg på graptolitter (dyrefossiler) og paleontologi. Som sin første oppgave i Bergen fikk hun da også ansvaret for å gjennomgå museets paleontologiske samlinger, for å lage en utstillingssamling og en studiesamling. Men deretter beordret Kolderup henne til utelukkende å konsentrere seg om Vestlandets kvartærgeologi, med særlig vekt på å kartlegge klimaforandringer gjennom undersøkelser av morenemateriale, særlig i avleiringer i sand- og grustak.  
 
-![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-t-02-12-04-047.jpg)
-*Thomassens regnbue, fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
+![geologisk snitt](/images/stein/ubb-ms-2093-t-02-12-04-047.jpg)
+*Fra Astrid Monsens feltarbeid, Gåssand ved Os, 1939. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
 
 Karrieremessig var nok Kolderups avgjørelse svært problematisk for graptolitt-spesialisten, og det forteller nok like mye om hennes status ved avdelingen, som ung nyansatt kvinnelig forsker i et mannsdominert arbeidsmiljø. I tillegg hadde Kolderup i 1919 ansatt sin egen sønn, Niels-Henrik Kolderup, i en amanuensis-stilling, så Astrid Monsen ble i nesten hele sin tid ved museet regjert av far og sønn Kolderup. 
 
@@ -34,7 +34,7 @@ I over 25 år utforsket Astrid Monsen Vestlandets kvartærgeologi, i hovedsak i 
 <Work iiifContent="https://api.ub.uib.no/items/ubb-jr-089-002?as=iiif">
   <Work.Content>
     <Work.Description>
-      Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Universitetsbiblioteket i Bergen.
+      Astrid Monsen med assistenter på feltarbeid i Romarheim, 1930. Fotografering av sedimenter. Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.
     </Work.Description>
     <Work.Link href="https://marcus.uib.no/instance/photograph/ubb-jr-089-002.html">
       Se bildet i Marcus
