--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -58,6 +58,14 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     href="/tema/helse/" 
   />
 
+<Card 
+    title="Christies reiseapotek»" 
+    description="For en trygg reise." 
+    image="/nav-card-images/ubb-bros-05877b-icon.jpg" 
+    imageAlt="Tegning av Christie" 
+    href="/tema/helse/reiseapotek" 
+  />
+
   <Card 
     title="Tidlige bokverk om medisin" 
     description="Les om Christie og de «mærkelige Fiske» i museet" 
