--- a/content/index.mdx
+++ b/content/index.mdx
@@ -20,7 +20,7 @@ import { Button } from '@/components/ui/button'
 <div className="feature text-xl text-center py-20 md:py-42">
   <h2 className="text-xl text-center">— Menneskene —</h2>
 
-  Her er en liste over menneskene som er tilgjengelige for å bruke i utstillingen.
+  Menneskene som på ulike vis har formet museets historie
 
   <PeopleMarquee />
 
