--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -50,12 +50,30 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     href="/tema/helse/" 
   />
 
+
+
 <Card 
-    title="Svaneapoteket" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="/tema/helse/" 
+    title="Et menneske i klaffer" 
+    description="Utbrettbar anatomi" 
+    image="/nav-card-images/ubb-romertall-oktav-ii-b-2-sch-01b-icon.jpg" 
+    imageAlt="Tegning av hode" 
+    href="/tema/helse/utbrettbar" 
+  />
+  
+  <Card 
+    title="Epidemipaviljonger og «Sundheds-Certificat»" 
+    description="Les mer om Den Store og Den Lille Epidemipaviljongen" 
+    image="/nav-card-images/ubb-ms-0659-d-08-05.jpg" 
+    imageAlt="Utsnitt av sunnhetssertifikat" 
+    href="/tema/helse/epidemipaviljong" 
+  />
+
+<Card 
+    title="Armauer Hansen og leprabasillen" 
+    description="Gerhard Armauer Hansen, Bergens Museum og lepraforskningen" 
+    image="/nav-card-images/ubb-kk-n-389-041-icon.jpg" 
+    imageAlt="Portrett av Armauer Hansen" 
+    href="/tema/helse/armauer-hansen" 
   />
 
 <Card 
@@ -75,19 +93,11 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
   />
 
 <Card 
-    title="Et menneske i klaffer" 
-    description="Utbrettbar anatomi" 
-    image="/nav-card-images/ubb-romertall-oktav-ii-b-2-sch-01b-icon.jpg" 
-    imageAlt="Fisk" 
-    href="/tema/helse/utbrettbar" 
-  />
-  
-  <Card 
-    title="Epidemipaviljonger og «Sundheds-Certificat»" 
-    description="Les mer om Den Store og Den Lille Epidemipaviljongen" 
+    title="Svaneapoteket" 
+    description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/helse/epidemipaviljong" 
+    href="/tema/helse/" 
   />
 
 </Cards>
