--- a/content/tema/helse/utbrettbar.mdx
+++ b/content/tema/helse/utbrettbar.mdx
@@ -17,7 +17,42 @@ keywords:
 
 Helt fra 1600-tallet har anatomiske klaffebøker blitt produsert. Disse bøkene og bøker generelt var dyre og ikke for alle. Utover 1800-tallet ble både trykking av bøker mer utbredt og den økte tilgang på bøker gjorde også at «folk flest» fikk tilgang på kunnskap.
 Enkelte av de medisinske klaffebøkene fra 1800-tallet har funnet sin vei til samlingene våre, gitt som gaver til museet. De er produsert på forskjellige forlag, og det viser hvor vanlig disse var fra midten til slutten av 1800-tallet.
-{/*
-LEGGE TIL TRE IIIF-KOMPONTNETER FRA MARCUS
- */}
+
+
+
+<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-sch-01?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      «Anatomie des menschlichen Kopfes mit Einschluss des Halses in Bild und Beschreibung : Zeichnungen nach Angabe des Verfassers». Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/book/ubb-romertall-oktav-ii-b-2-sch-01.html">
+      Se boken i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
+
+<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-sch-02?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      «Menneskets legeme : anskuelig fremstilling af dets bygning og dets organer : med forklarende tekst : tegninger efter forfatterens opgivelse». Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/book/ubb-romertall-oktav-ii-b-2-sch-02.html">
+      Se boken i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
+
+<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-ebe-01?as=iiif">
+  <Work.Content>
+    <Work.Description>
+      «Der Mensch, oder wie es in unserem Kørper aussieht und wie seine Organe arbeiten». Universitetsbiblioteket i Bergen.
+    </Work.Description>
+    <Work.Link href="https://marcus.uib.no/instance/book/ubb-romertall-oktav-ii-b-2-ebe-01.html">
+      Se boken i Marcus
+    </Work.Link>
+  </Work.Content>
+</Work>
+
 </ContentGrid>
