--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -63,9 +63,9 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
   <Card 
     title="Epidemipaviljonger og «Sundheds-Certificat»" 
     description="Les mer om Den Store og Den Lille Epidemipaviljongen" 
-    image="/nav-card-images/ubb-ms-0659-d-08-05.jpg" 
+    image="/nav-card-images/ubb-ms-0659-d-08-05-icon.jpg" 
     imageAlt="Utsnitt av sunnhetssertifikat" 
-    href="/tema/helse/epidemipaviljong" 
+    href="/tema/helse/epidemipaviljong"
   />
 
 <Card 
@@ -77,11 +77,11 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
   />
 
 <Card 
-    title="Christies reiseapotek»" 
+    title="Christies reiseapotek" 
     description="For en trygg reise." 
     image="/nav-card-images/ubb-bros-05877b-icon.jpg" 
     imageAlt="Tegning av Christie" 
-    href="/tema/helse/reiseapotek" 
+    href="/tema/helse/reiseapotek"
   />
 
   <Card 
