--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -42,12 +42,15 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
 </ImageCarousel>
 
 <Cards id="historier" title="Bokstaver og tegn i samlingene" className="full pt-10 md:pt-20">
+
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
-    description="" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    title="Ms 28" 
+    description="En håndskrevet bok som er 825 år!" 
+    image="/nav-card-images/ubb-ms-0028-icon.jpg" 
+    imageAlt="håndskrevet bok" 
+    href="/tema/bokstaver-og-tegn/ms-28" 
   />
+
   <Card 
     title="Runepinner fra Bergen" 
     description="Ojda, les mer om det utsvevende språket på runepinnene i &quot;200 Fortellinger&quot;" 
