--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -51,6 +51,13 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
     href="/tema/bokstaver-og-tegn/ms-28" 
   />
 
+<Card 
+    title="Fragmenter" 
+    description="Kreativ gjenbruk og uventede funn" 
+    image="/nav-card-images/ubb-ms-1549-06-a-icon.jpg" 
+    imageAlt="fragment av håndskrift" href="/tema/bokstaver-og-tegn/fragmenter" 
+  />
+
   <Card 
     title="Runepinner fra Bergen" 
     description="Ojda, les mer om det utsvevende språket på runepinnene i &quot;200 Fortellinger&quot;" 
@@ -58,12 +65,7 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
     imageAlt="Runepinne" 
     href="https://tohundrefortellinger.w.uib.no/1979/09/15/1979-frekke-runepinner-fra-bryggen/" 
   />
-  <Card 
-    title="Christie og de «mærkelige Fiske»" 
-    description="" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" 
-  />
+  
   <Card 
     title="Christie og de «mærkelige Fiske»" 
     description="" 
