--- a/content/tema/bokstaver-og-tegn/fragmenter.mdx
+++ b/content/tema/bokstaver-og-tegn/fragmenter.mdx
@@ -14,14 +14,15 @@ keywords:
 
 # Fragmenter
 
-Fragmenter
-Det er hovedsakelig fragmenter av håndskrifter og inkunabler vi tenker på når vi snakker om fragmenter. (En inkunabel er en bok trykket i perioden fra boktrykkerkunsten ble oppfunnet til slutten av 1400-tallet). <a href="https://marcus.uib.no/instance/collection/fragmentsamlingen">Fragmentsamlingen kan man se i Marcus</a>, og legg merke til at det er flest latinske fragment. Det er også lett å se hvilke fragment som har vært gjenbrukt som bokbind.
+Det er hovedsakelig fragmenter av håndskrifter og inkunabler vi tenker på når vi snakker om fragmenter. (En inkunabel er en bok trykket i perioden fra boktrykkerkunsten ble oppfunnet til slutten av 1400-tallet).
+
+<a href="https://marcus.uib.no/instance/collection/fragmentsamlingen">Fragmentsamlingen kan man se i Marcus</a> - legg merke til at det er flest latinske fragment. Formen på noen av fragmentene avslører også at de er blitt gjenbrukt som bokbind.
 
 Når en bok etter lang tids (kanskje uvøren) bruk går litt i oppløsning, så kan rester av gamle middelalder-håndskrifter plutselig komme til syne.
 
 
 ![Fragmenter på bokrygg](/images/bokstaver-og-tegn/ubb-ms-2159-a-002.jpg)
-*Her ser vi hvordan middelalderfragmentene er blitt brukt til å forsterke bokryggen. Funnet i Librar q24.*
+*Her ser vi hvordan middelalderfragmentene er blitt gjenbrukt til å forsterke bokryggen. Funnet i Librar q24.*
 
 
 Eller enda sjeldnere - at de dukker opp under en arkeologisk utgravning. Det var nettopp det som skjedde på 1960-tallet, når det ble foretatt arkeologiske utgravninger under kirkegulvet på Kaupanger kirke. Der dukket fire knøttsmå manuskript-fragmenter opp, som senere ble gitt til biblioteket.
