--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -57,17 +57,17 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
     image="/nav-card-images/ubb-ms-1549-06-a-icon.jpg" 
     imageAlt="fragment av håndskrift" href="/tema/bokstaver-og-tegn/fragmenter" 
   />
-
+public/nav-card-images/
   <Card 
     title="Runepinner fra Bergen" 
     description="Ojda, les mer om det utsvevende språket på runepinnene i &quot;200 Fortellinger&quot;" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/nav-card-images/um-brm110-001711-001-runepinne-icon.jpg" 
     imageAlt="Runepinne" 
     href="https://tohundrefortellinger.w.uib.no/1979/09/15/1979-frekke-runepinner-fra-bryggen/" 
   />
   
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
+    title="SPRÅK" 
     description="" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" 
