Legg til tekst og foto

--- a/content/tema/det-store-utland/index.mdx
+++ b/content/tema/det-store-utland/index.mdx
@@ -29,6 +29,14 @@ import { Card, Cards } from '@/components/card'
 
 <Cards title="Historier om Verden i Bergen">
  <Card 
+    title="Den samiske samlingen" 
+    description="I denne nettutstillingen kan du lese om Universitetsmuseet i Bergen sin samling av samisk kulturarv. Kva finnes i samlingen, hvordan skal museet etisk forvalte 
+    denne kulturarven?." 
+    image="/images/det-store-utland/E8500.jpg" 
+    imageAlt="Foto av en modell av en kinesisk pagode. I sju etasjer. Brun. Laget av tre." 
+    href="https://tohundrefortellinger.w.uib.no/1825/09/26/1827-en-kinesisk-pagode/" 
+  />
+  <Card 
     title="Museets første gjenstand?" 
     description="En modell av kinesisk pagode." 
     image="/images/det-store-utland/E8500.jpg" 
