--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -23,39 +23,55 @@ import { JumpToStories } from '@/components/jump-to-stories'
 </Hero>
 
 <ContentGrid>
-SETT INN TEKST NÅR KLART
+En av de eldste katalogene museet har bevart er «Catalog over Bergens Museums Ethnographiske Samling». Denne ble skrevet av museets grunnlegger Christie i 1848, da han 
+systematiserte den etnografiske samlingen. 
 
 <JumpToStories title="verden-i-bergen" />
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Saepe imperdiet at per, appareat vituperata vix te, pri sint assueverit te. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Ridens nostro perfecto ad cum, debet omnes splendide sit eu, vix an iisque dissentias. Scripta periculis ei eam, te pro movet reformidans. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Scripta periculis ei eam, te pro movet reformidans. Vivendum intellegat et qui, ei denique consequuntur vix. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Sed no sumo stet, est ei quodsi feugait liberavisse, in pro quot facete definitiones.
+Kombinasjonen av Bergen som sjøfartsby med forbindelser i hele verden, og Christie sitt store nettverk i inn- og utland, gjorde at museets etnografiske samling vokste raskt. 
+Museet mottok gjenstander fra hele verden, både som gaver, kjøp og byttehandle.
+
+Faktisk regnes modellen av en kinesisk pagode (E8500), som museets første gjenstand. Den ble innlemmet i samlingen i 1825 og var en gave fra kjøpmann Thorstein Hallanger 
+(1784-1853). I Christie sin katalog fra 1848 står modellen oppført som «Orientalsk bedehus».
+
+Museets etnografiske samling har også mange gjenstander fra norsk og samisk kulturarv. 
+
+Et eksempel på hvordan disse gjenstandene kom til museet finner vi i historien om Johan Adrian Jacobsen. Han reiste rundt i hele Norge mellom 1892 og 1894, for å kjøpe inn 
+gjenstander særlig fra de norske bygdene. Han førte systematisk en protokoll over alle sine innkjøp, om det var votter, tepper, møbler, kister, alt ble notert hvor de er 
+kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har vi fortsatt på museet i dag. Protokollen kan leses i sin helhet på museets side på Digitalarkivet.
 
 <ImageCarousel className="feature" title="Verden i Bergen">
   <ImageCarousel.Item
-    image="/images/glass/By136_flaske.jpg" 
-    imageAlt="En glassflaske formet som pistol, i blått glass 36 cm lang"
+    image="/images/verden-i-bergen/A007FFaL0001_katalog.jpg" 
+    imageAlt="Katalog innbundet i brunt skinn"
   > 
-    Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
+    Den etnografiske katalogen fra 1849 (Skjermbilde fra Digitalarkivet).
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
-    image="/images/glass/Christie sitt notat.png" 
-    imageAlt="Et arkiv med håndskriften til Christie, hvor han beskriver glassflasken"
+    image="/images/verden-i-bergen/E8500_kinesisk_pagode.jpg" 
+    imageAlt="Foto av en modell av en kinesisk pagode. I sju etasjer. Brun. Laget av tre"
   >
-    W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
+    Modell av en kinesisk pagode (E8500) (Foto:Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
-    image="/images/glass/ubb-nor-b-0723_xl_Glassmagasin.jpg" 
-    imageAlt="Foto av glassmagasinet i Bergen. En kvinne og en mann står i butikken og ser på glass."
+    image="/images/verden-i-bergen/Jacobsen_katalog.jpg" 
+    imageAlt="Håndskrevet protokoll, over gjenstander kjøpt inn til museet mellom 1892 og 1894."
   > 
-    Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
+    Johan Adrian Jacobsen sin protokoll over enkelte av gjenstandene han kjøpte i Sogn. Foto: Anita Haugen Lie, Universitetsmuseet i Bergen 
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
-    image="/images/glass/B2272_glassbeger.jpg" 
-    imageAlt="Lysegrønt, gjennomsiktig glassbeger fra Folkevandringstid."
+    image="/images/verden-i-bergen/E2292_Kvinnelue.jpg" 
+    imageAlt="Grønn lue, med røde og blå bånd.."
   > 
-    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
+    Samisk kvinnelue med trehorn (E2292) Foto: Universitetsmuseet i Bergen. 
+  <ImageCarousel.Item
+    image="/images/verden-i-bergen/Bd1931_brudekrone.jpg" 
+    imageAlt="Brudekrone i sølv. Rikt utsmykket"
+  > 
+    Brudekrone i sølv kjøpt av Jacobsen i Hornindal (Bd1931) Foto: Universitetsmuseet i Bergen.
   </ImageCarousel.Item>
 
 </ImageCarousel>
@@ -63,17 +79,32 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <Cards id="historier" title="Historier om Verden i Bergen" className="full pt-10 md:pt-20">
   <Card 
     title="Samisk samling" 
-    description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
+    description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv. 
+    Hva finnes i samlingen, hvordan skal museet etisk forvalte denne kulturarven?" 
+    image="/images/verden-i-bergen/E8289_kofte.jpg" 
+    imageAlt="Samisk kofte i blått med gule, røde og grønne bånd, rundt halsen, ermene" 
     href="https://samisksamling.w.uib.no/" 
   />
    <Card 
     title="Museets første gjenstand?" 
-    description="En modell av kinesisk pagode." 
+    description="Les mer om modellen av en kinesisk pagode." 
     image="/images/det-store-utland/E8500.jpg" 
     imageAlt="Foto av en modell av en kinesisk pagode. I sju etasjer. Brun. Laget av tre." 
     href="https://tohundrefortellinger.w.uib.no/1825/09/26/1827-en-kinesisk-pagode/" 
+  />
+   <Card 
+    title="Wayang - dukketeater fra Java" 
+    description="Les mer om samlingen med dukker til Wayang kulit og Wayang golek dukketeater " 
+    image="/images/verden-i-bergen/E9292_Java.jpg" 
+    imageAlt="En dukke. Laget flat med pinne til bruk i dukketeater. Figuren står på en brun båt og er en slags blanding, med blå fuglekropp og monsteraktig ansikt." 
+    href="https://tohundrefortellinger.w.uib.no/1970/09/18/1970-wayang-dukketeater-fra-java/" 
+  />
+    <Card 
+    title="Admiral Bruni D’Entrecasteauxs samling fra Stillehavet" 
+    description="Les mer om samlingen fra Stillehavet som Christie kjøpte av Ankerfamilien" 
+    image="/images/verden-i-bergen/vifte-E42-43.jpg" 
+    imageAlt="Vifte laget av strå" 
+    href="https://tohundrefortellinger.w.uib.no/1970/09/18/1970-wayang-dukketeater-fra-java/" 
   />
 </Cards>
 
