legg til foto og cards glass

--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -77,37 +77,37 @@ En helt spesiell kuriositet finner vi i museets bysamling. I 1828 får museet en
 <Cards id="historier" title="Historier om glass" className="full pt-10 md:pt-20">
   <Card title="Om Bergens Glasmesterlaug»" 
     description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
+    image="/images/glass/ubb-ms-0167-03-02_p0001_md.jpg" 
+    imageAlt="Forsiden på en marmorert protokoll fra 1700-tallet" 
     href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
   />
    <Card 
     title="Etnografiske gjenstander i glass" 
     description="En oversikt over gjenstander i glass i museets etnografiske samling" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/images/glass/E1013_vannpipe_red.jpg" 
+    imageAlt="Vannpipe i gjennomsiktig glass, med mønster" 
     href="https://www.unimus.no/portal/#/search/things?freetext=glass&requirePhoto=false&collectionType=Etnografi&museum=UM&limit=100" 
   />
    <Card 
     title="Drikkeglass på Bryggen i Bergen 1300-1700" 
     description="Utforsk den digitale nettutstillingen om drikkeglass på Bryggen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/images/glass/BRM0_drikkeglass_red.jpg" 
+    imageAlt="Undersiden av et glassbeger, i lyst glass" 
     href="https://glass.app.uib.no/" 
   />
    <Card 
     title="Octavias epergne!" 
     description="Les mer om Octavias Sperati og hennes epergne" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="/tema/glass/octavia-sperati" 
+    image="/images/glass/Octavia_BTM302_red.jpg" 
+    imageAlt="Stor fat i glass og sølv" 
+    href="tema/glass/octavia-sperati.mdx" 
   />
    <Card 
     title="Statsminister Michelsens dødsbo" 
     description="Deler av dødsboet til tidligere statsminister Michelsen ble testamentert til museet og her finner vi blant annet en glass lampe" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="" 
+    image="/images/glass/Lampe_By6524_red.jpg" 
+    imageAlt="Lampeskjerm i hvitt glass med blømster malt på" 
+    href="/tema/glass/statsminister-michelsens-doedsbo.mdx" 
   />
 </Cards> 
 
