--- a/content/tema/glass/octavia-sperati.mdx
+++ b/content/tema/glass/octavia-sperati.mdx
@@ -11,6 +11,7 @@ keywords:
  
 # Octavias epergne!
  
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
- 
+Octavia Sperati var skuespiller, blant annet på Den Nationale Scene. Den 25. oktober 1901 mottok hun dette epergne i gave fra O.B Sundt. Et epergne er et 
+slags serveringsstativ, ofte brukt som et midtpunkt på spisebordet. Gjenstanden ble donert til Teatermuseet, hvor samling i dag er en del av Universitetsmuseet i Bergen.
+
 </ContentGrid>
