Legg til bilder og tekst

--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -24,9 +24,9 @@ import { JumpToStories } from '@/components/jump-to-stories'
 </Hero>
 
 <ContentGrid>
-Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger W.F.K. Christie hvilke 
+Kirkekunsten har vært viktig for museet helt siden opprettelsen i 1825. Allerede i invitasjonen om å opprette et museum definerte museets grunnlegger Wilhelm Frimann Koren Christie hvilke 
 gjenstandskategorier han ønsket å samle inn til sitt nye museum. En av kategoriene var *Levninger af den catholske Cultus*, eller kirkekunst fra middelalderen. Christie 
-fikk også med seg biskop i Bergen Jacob Neumann inn i Direksjonen (museumsstyre). Samarbeide dem imellom førte til at museet i dag har en enestående samling av kirkekunst.
+fikk også med seg biskop i Bergen Jacob Neumann inn i Direksjonen (museets styre) og samarbeide dem imellom førte til at museet i dag har en enestående samling av kirkekunst.
 
 <JumpToStories title="kirkekunst" />
 
@@ -39,9 +39,9 @@ oppover korsfestelsen og på toppen av tavlen oppstandelsen.
 
 Grunnen til at altertavlen endte på museum er interessant. Da det nye kirkebygget ble innviet i Ørskog i 1874 hadde kirken en del inventar man ikke ønsket å benytte i den 
 nye kirken.  Vi kan lese i "Bergens Adresse-Contoirs Efterretninger" den 19.jaunar 1885 at; *Bergens Stiftsdirection anmodet Ørskogs Formandskab om at afstaa til Museet en 
-gammel Altertavle*. I møteboken til Ørskog formannskap finner vi vedtaket den 3. januar 1885 om å gi altertavle i gave til Bergens Museum.
+gammel Altertavle*. I møteboken til Ørskog formannskap finner vi et vedtak den 3. januar 1885 om å gi altertavlen i gave til Bergens Museum.
 
-Siden den gang har altertavlen vært en sentral del av museets utstillinger, sist sett i Kirkekunstutstillingen, som nå kan oppleves digitalt.
+Siden den gang har altertavlen vært en sentral del av museets samlinger, sist sett i Kirkekunstutstillingen, som nå kan oppleves digitalt.
 
 <ImageCarousel className="feature" title="Kirkekunst">
   <ImageCarousel.Item 
@@ -86,42 +86,42 @@ Siden den gang har altertavlen vært en sentral del av museets utstillinger, sis
   <Card 
     title="Kirkekunst 360" 
     description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
+    image="/images/kirkekunst/Dørslag_stavkirke_red.jpg" 
+    imageAlt="FiskDørslag i jern, rikt dekorert fra stavkirke" 
     href="https://kuula.co/share/collection/7J7Sx?logo=1&info=0&fs=1&vr=1&zoom=1&initload=0&thumbs=-1" 
   />
   <Card 
     title="Middelalderens kirkekunst" 
     description="Få innblikk i museets kirkekunstsamling fra Middelalder" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/images/kirkekunst/Kalk_Ma187a_red.jpg" 
+    imageAlt="En liten kalk i gull" 
     href="https://kirkekunst.w.uib.no/" 
   />
   <Card 
     title="Nedstrynfrontalen" 
-    description="Historien til den berømte nedstrynfrontalen" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    description="Les historien til den berømte nedstrynfrontalen" 
+    image="/images/kirkekunst/Ma1_Nedstryn_red.jpg" 
+    imageAlt="Rikt dekorert altertavle med bilder fra bibelhistorien" 
     href="https://tohundrefortellinger.w.uib.no/1826/09/26/1826-nedstrynfrontalen/" 
   />
   <Card 
     title="Hovemadonnaen" 
-    description="Om madonnafiguren som kom til museet i 1840" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    description="Les mer om madonnafiguren som kom til museet i 1840" 
+    image="/images/kirkekunst/MA27_madonna_red.jpg" 
+    imageAlt="Madonnafigur med jesusbarn på fanget. Laget i tre og malt med gull" 
     href="https://tohundrefortellinger.w.uib.no/1840/01/01/1840-hovemadonnaen/" 
   />
   <Card 
     title="Hvem var biskop Jacob Neumann?" 
-    description="Bisop i Bergen og en av grunnleggerne av Bergens Museum" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    description="Les mer om biskop i Bergen og en av grunnleggerne av Bergens Museum" 
+    image="/images/kirkekunst/By7851_Neumann_red.jpg" 
+    imageAlt="Maleri av gammel mann. Biskop." 
     href="https://tohundrefortellinger.w.uib.no/1848/09/27/1848-biskop-jacob-neumann-og-museet/" 
   />
   <Card 
     title="Stavkirkeportalene fra Stedje" 
     description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/kirkekunst/Stavkirkeportal_Stedje.jpg" 
     imageAlt="" 
     href="https://tohundrefortellinger.w.uib.no/1867/06/20/1866/" 
   />
